--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=Implements MKS SERVO42E/57E CAN protocol with a hardware-agnostic CAN 
 category=Device Control
 url=
 architectures=*
-includes=MKSServoE.h
+includes=MKSServoE.h,transport/adapters/UnoR4CanBus.h
